[project]
name = "doclayoutyolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "doclayout-yolo>=0.0.4",
    "easyocr>=1.7.2",
    "huggingface-hub>=0.35.3",
    "ipykernel>=7.0.1",
    "pdf2image>=1.17.0",
    "pip>=25.2",
    "pymupdf>=1.26.5",
]
